Fixed issue with record preview being too low on screen.

--- a/src/components/RecordPreview/recordPreview.css
+++ b/src/components/RecordPreview/recordPreview.css
@@ -34,7 +34,7 @@
   pointer-events: none;
   display: grid;
   position: absolute;
-  top: calc(800px+8vw);
+  /* top: calc(800px+8vw); */
   left: 0px;
   z-index: 1;
   width: 100%;
